Trying to purge all the random double spaces

--- a/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -46,7 +46,7 @@ BEL_The_Lion_desc:0 "After a difficult revolution and a long process of reforms,
 BEL_Secretaries:0 "Economic Secretaries"
 BEL_Secretaries_desc:0 "As the first step in Plan De Man, the creation of secretaries controlled by technocrats were tasked with fighting unemployment and countering national populist propaganda."
 BEL_Civilian:0 "Civilian Focus"
-BEL_Civilian_desc:0  "By focusing on civilian industry over military we will be able to improve living conditions for our citizens."
+BEL_Civilian_desc:0 "By focusing on civilian industry over military we will be able to improve living conditions for our citizens."
 BEL_Corporations:0 "Corporation Focus"
 BEL_Corporations_desc:0 "By decreasing laws controlling large corporations we allow them to expand and provide employment for many citizens."
 BEL_Ministries:0 "Ministries"
@@ -380,7 +380,7 @@ BEL_infantry_equipment_1:0 "Mauser Model 1935"
 BEL_infantry_equipment_1_short:0 "Mauser m35"
 BEL_infantry_equipment_2:0 "Maschinenpistole 28"
 BEL_infantry_equipment_2_short:0 "MP-28"
-BEL_infantry_equipment_3:0 "STEN Mk.V" ##Maybe change to a non english weapon, this time I would favour the FN version of the BAR (already produced in the 30's IRL and chosen by Paradox) ;  there are no good choice 
+BEL_infantry_equipment_3:0 "STEN Mk.V" #Maybe change to a non English weapon, this time I would favour the FN version of the BAR (already produced in the 30's IRL and chosen by Paradox); there are no good choice 
 BEL_infantry_equipment_3_short:0 "STEN Mk.V"
 BEL_infantry_equipment_4:0 "SAFN-49"
 BEL_infantry_equipment_4_short:0 "SAFN-49"
