--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -50,9 +50,9 @@ USA_radical_centrism_desc:0 "The American Republic is threatened on all sides by
 USA_defend_democracy:0 "Defend Democracy"
 USA_defend_democracy_desc:0 "Democracy is threatened from all sides from syndicalism and populism. American Democracy itself is threatened, we must do everything we can to safeguard American Democracy from all who endanger her. "
 USA_president_curtis:0 "President Curtis"
-USA_president_curtis_desc:0 "The Vice President for the successful but flagging Hoover administration, Curtis is the voice of compromise and reform in the American government.  The first President of Native American ancestry, which serves as an effective rallying point for racial justice. He brings an affable face and new commitment to American values of liberty and freedom for all men, although many wonder if he will have the resolve to settle the coming conflict."
+USA_president_curtis_desc:0 "The Vice President for the successful but flagging Hoover administration, Curtis is the voice of compromise and reform in the American government. The first President of Native American ancestry, which serves as an effective rallying point for racial justice. He brings an affable face and new commitment to American values of liberty and freedom for all men, although many wonder if he will have the resolve to settle the coming conflict."
 USA_malice_chairty:0 "Pass the Economic Relief Act"
-USA_malice_chairty_desc:0 "One of the first acts Curtis has as President is to address the Great Depression. The Economic Relief Act which was a policy he helped organize as Vice-President is given both new life and strength to address the Depression and get America back on her feet. "
+USA_malice_chairty_desc:0 "One of the first acts Curtis has as President is to address the Great Depression. The Economic Relief Act which was a policy he helped organise as Vice-President is given both new life and strength to address the Depression and get America back on her feet. "
 USA_support_aclu:0 "Pass the Civil Liberties Act"
 USA_support_aclu_desc:0 "As President Curtis takes office he gives a stirring speech over the radio to the whole nation. Addressing the political conflict he says that the guiding ideal for his administration will be malice towards none and charity towards all. To that end he passes the Civil Liberties act to help safeguard Freedom and Liberty in America. A token gesture for the most part, but one that might just save America. "
 USA_banking_act:0 "Pass the Infrastructure bill"
@@ -206,7 +206,7 @@ USA_double_v_campaign_desc:0 "While many African-Americans and Native Americans 
 USA_fate_of_the_unions:0 "Fate of the Unions"
 USA_fate_of_the_unions_desc:0 "Many of the Unions were part of the CSA and fought against the federal government. The question then comes up as to what to do with them. Some want to punish them for their actions and outlaw them, while others think that outlawing them will just cause further problems down the road."
 USA_new_america:0 "A new America"
-USA_new_america_desc:0 "Our society has come out stronger as we rebuild from the brutal and bloody civil.  Though we were battered and bruised today is a new day in America. "
+USA_new_america_desc:0 "Our society has come out stronger as we rebuild from the brutal and bloody civil. Though we were battered and bruised today is a new day in America. "
 USA_rebuilding_america:0 "Rebuilding America"
 USA_rebuilding_america_desc:0 "To rebuild the country we need to focus on rebuilding the different regions of the country. The war devastated every region of the country and it is time to rebuild the country."
 USA_rebuiliding_the_midwest:0 "Rebuilding the Midwest"
