Didn't mean to leave that in

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -51,11 +51,11 @@ worldnews.8.b:0 "Let us review our army and defences, urgently."
 worldnews.8.c:0 "We will contain Russia again if need be."
 worldnews.8.e:0 "Russia will recover all its sovereign territories!"
 
-worldnews.9.t:0 "The First International Congress"
+worldnews.9.t:0 "The First Internationale Congress"
 worldnews.9.d:0 "Representatives from numerous Syndicalist and Socialist nations have gathered in Paris today, in what might just be a defining moment in the history of the ideologies. The French Commune has invited numerous countries to the first official gathering of the members of the Third Internationale to discuss political, foreign matters and cooperate on spreading Socialism further. The French opened the International with a powerful parade, festivities in Paris and finally a speech by the Chairman of the CSP. \n\nTopics like Spain, the United States and the world economic crisis are at the top priority, and it's expected that France and Britain will take initiative in the gathering."
 worldnews.9.a:0 "The Syndicalists plot once more in the open against us all."
 worldnews.9.b:0 "The Internationale Congress has many issues to settle."
-worldnews.9.c:0 "We are proud to host the first Internionale Congress!" # is Internionale correct?
+worldnews.9.c:0 "We are proud to host the first Internationale Congress!"
 
 worldnews.10.t:0 "Rise of the Mongol Empire"
 worldnews.10.d:0 "News and reliable sources of them are scarce in the vast plains of Mongolia, but it has recently come to light that the Mad Baron of Mongolia, Roman Ungern von Sternberg, has risen to new heights and declared himself to be the successor to Genghis Khan, appropriately named Ungern Khan.\n\nIt is now known what this change will entail, though. The Mongolian army has already defeated the Ma Clique and von Sternberg has declared his right to reign over all Mongolians numerous times before. Experts deny the possibility that the Mongolians could pose a threat to the established powers in the Far East, but the fresh Khan's ambition can only grow higher."
