--- a/localisation/KR_Indochinese_Union_l_english.yml
+++ b/localisation/KR_Indochinese_Union_l_english.yml
@@ -5,26 +5,26 @@ INC_aid_given:0 "Indochina Military Aid Program"
 INC_aid_recieved:0 "Indochina Military Aid Program"
 
 ### Parties ###
-INC_totalist_party:0 "Totalist Party"
-INC_totalist_party_long:0 ""
-INC_radical_socialist_party:0 "Radical Socialist Party"
-INC_radical_socialist_party_long:0 ""
-INC_syndicalist_party:0 "Syndicalist Party"
-INC_syndicalist_party_long:0 ""
-INC_social_democrat_party:0 "Social Democrat Party"
-INC_social_democrat_party_long:0 ""
-INC_social_liberal_party:0 "Social Liberal Party"
-INC_social_liberal_party_long:0 ""
-INC_market_liberal_party:0 "Market Liberal Party"
-INC_market_liberal_party_long:0 ""
-INC_social_conservative_party:0 "Social Conservative Party"
-INC_social_conservative_party_long:0 ""
-INC_authoritarian_democrat_party:0 "Authoritarian Democrat Party"
-INC_authoritarian_democrat_party_long:0 ""
-INC_paternal_autocrat_party:0 "Paternal Autocrat Party"
-INC_paternal_autocrat_party_long:0 ""
-INC_national_populist_party:0 "National Populist Party"
-INC_national_populist_party_long:0 ""
+INC_totalist_party:0 "Đảng Cộng sản Đông Dương"
+INC_totalist_party_long:0 "Đảng Cộng sản Đông Dương(Indochinese Syndicalist Party)"
+INC_radical_socialist_party:0 "Đảng Cộng sản Đông Dương"
+INC_radical_socialist_party_long:0 "Đảng Cộng sản Đông Dương(Indochinese Syndicalist Party)"
+INC_syndicalist_party:0 "Đảng Cộng sản Đông Dương"
+INC_syndicalist_party_long:0 "Đảng Cộng sản Đông Dương(Indochinese Syndicalist Party)"
+INC_social_democrat_party:0 "Đảng Cộng sản Đông Dương"
+INC_social_democrat_party_long:0 "Đảng Cộng sản Đông Dương(Indochinese Syndicalist Party)"
+INC_social_liberal_party:0 "Đảng tiến bộ Đông Dương"
+INC_social_liberal_party_long:0 "Đảng tiến bộ Đông Dương(Indochinese Progressive Party)"
+INC_market_liberal_party:0 "Mặt trận Tự do Thống nhất"
+INC_market_liberal_party_long:0 "Mặt trận Tự do Thống nhất(United Liberal Front)"
+INC_social_conservative_party:0 "Hội công dân"
+INC_social_conservative_party_long:0 "Hội công dân(Citizen's Assembly)"
+INC_authoritarian_democrat_party:0 "Đảng dân tộc"
+INC_authoritarian_democrat_party_long:0 "Đảng dân tộc(Nationalist Party)"
+INC_paternal_autocrat_party:0 "Phong trào Cách mạng Quốc gia"
+INC_paternal_autocrat_party_long:0 "Phong trào Cách mạng Quốc gia(National Revolutionary Movement)"
+INC_national_populist_party:0 "Mặt trận giải phóng Đông Dương"
+INC_national_populist_party_long:0 "Mặt trận giải phóng Đông Dương(Indochinese Liberation Front)"
 
 ### Opinion Modifiers ###
 INC_Liberation:0 "Bharatiya Commune has support our Independence movement!"
