Can now read Switzerland and Greece on the map

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -2467,10 +2467,10 @@ GRE_social_liberal_DEF:0 "The 2nd Hellenic Republic"
 GRE_market_liberal:0 "Greece"
 GRE_market_liberal_ADJ:0 "Hellenic"
 GRE_market_liberal_DEF:0 "Greece"
-GRE_social_conservative:0 "Kingdom of Greece"
+GRE_social_conservative:0 "Greece"
 GRE_social_conservative_ADJ:0 "Hellenic"
 GRE_social_conservative_DEF:0 "The Kingdom of Greece"
-GRE_authoritarian_democrat:0 "Kingdom of Greece"
+GRE_authoritarian_democrat:0 "Greece"
 GRE_authoritarian_democrat_ADJ:0 "Hellenic"
 GRE_authoritarian_democrat_DEF:0 "The Kingdom of Greece"
 GRE_paternal_autocrat:0 "Greece"
@@ -6054,25 +6054,25 @@ SWI_syndicalist_DEF:0 "The United Cantons"
 SWI_radical_socialist:0 "United Cantons"
 SWI_radical_socialist_ADJ:0 "Swiss"
 SWI_radical_socialist_DEF:0 "The United Cantons"
-SWI_social_democrat:0 "Swiss Confederation"
+SWI_social_democrat:0 "Switzerland"
 SWI_social_democrat_ADJ:0 "Swiss"
 SWI_social_democrat_DEF:0 "The Swiss Confederation"
-SWI_social_liberal:0 "Swiss Confederation"
+SWI_social_liberal:0 "Switzerland"
 SWI_social_liberal_ADJ:0 "Swiss"
 SWI_social_liberal_DEF:0 "The Swiss Confederation"
-SWI_market_liberal:0 "Swiss Confederation"
+SWI_market_liberal:0 "Switzerland"
 SWI_market_liberal_ADJ:0 "Swiss"
 SWI_market_liberal_DEF:0 "The Swiss Confederation"
-SWI_social_conservative:0 "Swiss Confederation"
+SWI_social_conservative:0 "Switzerland"
 SWI_social_conservative_ADJ:0 "Swiss"
 SWI_social_conservative_DEF:0 "The Swiss Confederation"
-SWI_authoritarian_democrat:0 "Swiss Confederation"
+SWI_authoritarian_democrat:0 "Switzerland"
 SWI_authoritarian_democrat_ADJ:0 "Swiss"
 SWI_authoritarian_democrat_DEF:0 "The Swiss Confederation"
-SWI_paternal_autocrat:0 "Swiss Confederation"
+SWI_paternal_autocrat:0 "Switzerland"
 SWI_paternal_autocrat_ADJ:0 "Swiss"
 SWI_paternal_autocrat_DEF:0 "The Swiss Confederation"
-SWI_national_populist:0 "Swiss Confederation"
+SWI_national_populist:0 "Switzerland"
 SWI_national_populist_ADJ:0 "Swiss"
 SWI_national_populist_DEF:0 "The Swiss Confederation"
 
