Port Remil. Oltenia to World News, some tweaks

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -417,6 +417,15 @@ worldnews.55.d:0 "In order to prevent a total collapse of the government in Pola
 worldnews.55.a:0 "Poland could not choose for itself, it appears. The military chose for her."
 worldnews.55.b:0 "With unrest and violence rising, the military guarantees our stability!"
 
+worldnews.56.t:0 "The Remilitarisation of Oltenia"
+worldnews.56.d:0 "The Treaty of Bucharest of 1918 officially ended the Weltkrieg for Romania, but at a high cost. The nation was now dominated by German and Austrian industries, Oltenia was demilitarised, and the oil fields were leased to Germany up to the distant year of 2012. The humiliation Romania endured resulted in it devolving into a National Populist dictatorship, led by the Conducător, Corneliu Codreanu. Codreanu and his Iron Guard set out to restore Romania to what they say it should have been, a titan of the Balkans. The first major move conducted by the Conducător is the remilitarisation of Oltenia, a strategic region in Wallachia with large oil reserves and military industry."
+worldnews.56.a:0 "Oltenia is part of our sovereign territory. We march our troops and build as we please."
+worldnews.56.b:0 "How dare they question the new order in the Balkans? We will keep an eye on them."
+worldnews.56.c:0 "Romania may come for Transylvania next. Let us increase guard in the mountain passes."
+worldnews.56.e:0 "It is no more than the Romanians walking into their own backyard."
+worldnews.56.f:0 "The old order of the Balkans must be questioned. Enough with Bulgaria and the Empire!"
+
+
 ### City Fall Events ###
 
 worldnews.250.t:0 ""
