--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -45,35 +45,35 @@ kr.political.1.a:0 "All good things must come to an end."
 
 kr.political.2.t:0 "Downfall in Stability!"
 kr.political.2.d:0 "With our recent lack of political power, our country has been weakened, we're now on the brink of instability."
-kr.political.2.a:0 "Terrible."
+kr.political.2.a:0 "This is concerning."
 
 kr.political.3.t:0 "Downfall in Stability!"
 kr.political.3.d:0 "With our recent lack of political power, our country has been weakened and is now considered to be unstable."
-kr.political.3.a:0 "It's only a temporary situation."
+kr.political.3.a:0 "This is only a temporary situation."
 
 kr.political.4.t:0 "Downfall in Stability!"
 kr.political.4.d:0 "With our recent lack of political power, our country has been weakened even more. Riots and strikes are now common place, and our government is struggling to assert its authority."
-kr.political.4.a:0 "This doesn't sound good..."
+kr.political.4.a:0 "This doesn't bode well."
 
 kr.political.5.t:0 "Downfall in Stability!"
 kr.political.5.d:0 "With our recent lack of political power, our country has plunged into a disaster. The situation is, by any measure, catastrophic. There is talk of revolution on the streets and people have lost faith in our government. We are struggling to keep our grasp on the country."
-kr.political.5.a:0 "This is disastrous!"
+kr.political.5.a:0 "This is a disaster!"
 
 kr.political.6.t:0 "Increase in Stability!"
 kr.political.6.d:0 "With our recent increase of political power, we are beginning to control the situation. However, we are still far from safe."
-kr.political.6.a:0 "Hurrah!"
+kr.political.6.a:0 "The worst is over!"
 
 kr.political.7.t:0 "Increase in Stability!"
 kr.political.7.d:0 "With our recent increase of political power, the end is in sight; we are nearly a stable nation."
-kr.political.7.a:0 "So close."
+kr.political.7.a:0 "We are almost back to normal."
 
 kr.political.8.t:0 "Increase in Stability!"
 kr.political.8.d:0 "With our recent increase of political power, we are finally stable once more. Hopefully it won't happen again."
 kr.political.8.a:0 "The [Root.GetAdjective] nation is strong."
 
 kr.political.9.t:0 "Potential Increase in Stability"
-kr.political.9.d:0 "With our recent increase of political power we now have the chance to improve our stability. \n\nTo go to a high or very high stability level you'll have to take the corresponding law in the stability screen, it will cost 150PP to go one level higher and remember that you can still loose those bonuses if your PP goes below zero. \nThis message won't fire again, so don't you forget."
-kr.political.9.a:0 "I won't I won't."
+kr.political.9.d:0 "With our recent increase in political power, we now have the chance to improve our stability. However, we must do so manually.\n\nTo go up to Good Stability or Very Good Stability, you will need to take the corresponding law in the Stability Tab under Laws & Government in the Political Screen, the cost is displayed under the option.\n\nDo note that you risk rapidly losing all your positive Stability levels if you ever go under 0 Political Power, so make sure that your country is actually going to stay stable on the short to medium term being making the investment.\n\nThis message won't fire again, so don't forget."
+kr.political.9.a:0 "I understand how to raise my stability."
 
 ### Popularity Events ###
 kr.political.11.t:0 "Very High Popularity"
@@ -90,7 +90,7 @@ kr.political.13.a:0 "Good."
 
 kr.political.14.t:0 "Low Popularity"
 kr.political.14.d:0 "The civilian support for the ruling party is low which influences our political power."
-kr.political.14.a:0 "This is bad..."
+kr.political.14.a:0 "This is bad."
 
 kr.political.15.t:0 "Very Low Popularity"
 kr.political.15.d:0 "The civilian support for the ruling party has reached a very low level which influences our political power."
