Spanish news events added

--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -289,6 +289,11 @@ sprc.122.t:0 "[Root.GetAdjective] Terror"
 sprc.122.d:0 "During ongoing civil war some of our commanders started to use rather doubtful methods to permanently suppress civilian population suspicious of helping our mortal enemies. Such policies, even if looks drastic, are necessary in these dark times."
 sprc.122.a:0 "War is war..."
 
+sprc.123.t:0 "Spanish Civil War Over"
+sprc.123.d:0 "The Spanish Civil War is finally over, and it seems that [SPR.GetNameDef] has emerged triumphant. Much of the countryside lies in ruins, and order has not completely been restored, but the [SPR.GetAdjective] government announced that the anarchist and syndicalist threats had finally been dealt with and would be unlikely to rise again anytime soon. This is a triumph for King Alfonso XIII, though the king is unlikely to know of it, having fallen into a coma shortly before the civil war broke out."
+sprc.123.a:0 "Hail to the king!"
+sprc.123.b:0 "I see..."
+
 ### Post-War ###
 
 ### CNT ###
@@ -333,6 +338,10 @@ sprc.221.t:0 "The People's Home"
 sprc.221.d:0 "Now that we have won the Civil War, our Syndicalist dream has become a reality! But should we keep the People's home in Barcelona, or move it to the old capital in Madrid?"
 sprc.221.a:0 "Madrid, for a unified Spain!"
 sprc.221.b:0 "Barcelona is now and forever the People's home."
+
+sprc.224.d:0 "The Spanish Civil War is finally over, and it seems that [CNT.GetNameDef] has emerged triumphant. Much of the countryside lies in ruins, and order has not completely been restored, but the [CNT.GetAdjective] government announced that the old feudal order had finally been put to rest, and that the people of Spain would now benefit from an orderly transition to a syndicalist regime. Massive crowds gathered in Barcelona to hail the returning militias and to offer a prayer that the new peace will turn into a permanent one."
+sprc.224.a:0 "The workers stand triumphant!"
+sprc.224.b:0 "I see..."
 
 sprc.225.t:0 "Gibraltar is in CNT-FAI Hands"
 sprc.225.d:0 "The vital port of Gibraltar has been taken by the CNT-FAI rebels. This means a syndicalist nation will control the sea lanes through the straits and be able to block any shipments or naval activity into or out of the Mediterranean. This could be a serious threat to our nation's interests."
@@ -482,3 +491,7 @@ sprc.322.a:0 "The after-effects of a war"
 
 sprc.323.t:0 "The Nation is Recovering"
 sprc.323.d:0 "Our efforts at rebuilding the country and regaining the trust of our people are paying off."
+
+sprc.326.d:0 "The Spanish Civil War is finally over, and it seems that the Carlists have emerged triumphant. Much of the countryside lies in ruins, and order has not completely been restored, but today huge crowds gathered in Burgos to greet their new king, Javier I de Borbón-Parma. The king proclaimed the day a holiday, saying that justice had finally been served to the Spanish pretenders and that the Carlist royal line was exactly where it should be. He promised a national restoration, as well as a return to the nation's Catholic roots. His promise was greeted with approval by the Pope, who offered prayers that Spain's new peace would prove a lasting one."
+sprc.326.a:0 "All hail King Javier!"
+sprc.326.b:0 "I see..."
