--- a/localisation/modifiers_l_english.yml
+++ b/localisation/modifiers_l_english.yml
@@ -19,8 +19,8 @@ MODIFIER_AIR_DETECTION:0 "Air Detection"
 MODIFIER_NAVAL_STRIKE:0 "Naval Strike"
 VISIBLE_MODIFIERS_END:0 "Visible Modifiers End"
 MODIFIER_CARRIER_TRAFFIC:0 "Carrier Traffic"
-MODIFIER_POLITICAL_POWER_GAIN:0 "Daily Political Power"
-MODIFIER_POLITICAL_POWER_COST:0 "Daily Political Power"
+MODIFIER_POLITICAL_POWER_GAIN:0 "Daily Political Power Gain"
+MODIFIER_POLITICAL_POWER_COST:0 "Daily Political Power Cost"
 MODIFIER_POLITICAL_POWER_FACTOR:0 "Daily Political Power"
 MODIFIER_NAVAL_HIT_CHANCE:0 "Naval Hit Chance"
 MODIFIER_NAVAL_SPEED:0 "Naval Speed"
@@ -41,7 +41,7 @@ MODIFIER_LOCAL_FACTORIES:0 "Local Factory Efficiency"
 MODIFIER_LOCAL_INTEL_TO_ENEMIES:0 "Intel to Enemies"
 MODIFIER_LOCAL_FACTORY_SABOTAGE:0 "Chance to Sabotage Constructions"
 MODIFIER_ATTRITION:0 "Division Attrition"
-MODIFIER_ATTRITION_DESC:0 "How much damage our divisions take from attrition when traversing rough terrain"
+MODIFIER_ATTRITION_DESC:0 "How much damage our divisions take from attrition when traversing "
 MODIFIER_AIR_ACCIDENTS:0 "Air Accident Chance"
 MODIFIER_AIR_ACCIDENTS_FACTOR:0 "Air Accident Chance"
 MODIFIER_LOCAL_ORG_REGAIN:0 "Organisation Regain"
