some bug-fixes for Spain, election news event

--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -220,6 +220,13 @@ sprd.27.b:0 "No, perhaps the time of the kingdom is over"
 sprd.28.t:0 "Restoring the Monarchy"
 sprd.28.d:0 "After the assassination of Juan, a void was left in the terms of a Royal Regent. Now Juan's older brother Jaime has returned from abroad and is requesting his rightful place as the heir to our Kingdom."
 
+sprd.29.t:0 "Spanish Elections"
+sprd.29.d.spr:0 "Today marked a startling result in the Spanish elections, held amid much violence and protest by the syndicalists and Carlist anarchists. Despite the efforts of those fringe groups, the ruling Acción Popular proved victorious- and, while opposition parties initially contested the election results, so far it appears as if the win is legitimate. While this by no means restores calm in [SPR.GetNameDef], it goes a long way to reassuring the public that the government maintains popular support and that a civil war has been narrowly averted."
+sprd.29.d.cnt:0 "Today marked a startling result in the Spanish elections, held amid much violence and protest. The anarcho-syndicalist party known as the Confederación Nacional del Trabajo - Federación Anarquista Ibérica - or the CNT-FAI - proved victorious by a wide margin. While the opposing Carlists initially contested the results, so far it appears as if the leftist win is legitimate and the CNT-FAI's central committee has already taken power in Madrid. The new government will have many challenges ahead in restoring order, but it seems as if a Spanish civil war has been narrowly averted."
+sprd.29.d.car:0 "Today marked a startling result in the Spanish elections, held amid much violence and protest. The Falange Española, supporters of the Carlist dynasty, proved victorious by a wide margin, paving the way for Infante Javier de Borbón-Parma to take the place of the comatose Alfonso XIII as the ruling King of Spain. While leftist parties initially contested the results, so far it appears as if the Carlist win is legitimate and Javier's coronation is scheduled to take place within the week. The new government will have many challenges ahead in restoring order, but it seems as if a Spanish civil war has been narrowly averted."
+sprd.29.a:0 "Peace rules in Spain!"
+sprd.29.b:0 "I see..."
+
 ### Post-War ###
 
 ### Foreign ###
