Fix a thing in Annexations

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -162,8 +162,8 @@ annex.53.t:0 "Fate of Burma"
 annex.53.d:0 "Our troops are marching through Rangoon while the Burmese leadership is either in exile or in prison. What shall we do with these lands?"
 annex.53.a:0 "Liberate them"
 annex.53.b:0 "Occupy them"
-annex.54.t:0 "Sudeten"
-annex.54.d:0 "The Germans in Sudeten has no problem being part of the Kaiserreich. Should we integrate them in our country?"
+annex.54.t:0 "The Sudetenland"
+annex.54.d:0 "The Germans living in the Sudeten mountains will have no problem being part of the Kaiserreich, as they are a large majority in those states. Should we integrate them in our country?"
 annex.54.a:0 "We claim these lands for Germany!"
 annex.54.b:0 "No, they are not true Germans!"
 annex.55.t:0 "The destiny of Italy"
