--- a/localisation/KR_Nationalist_France_l_english.yml
+++ b/localisation/KR_Nationalist_France_l_english.yml
@@ -231,6 +231,8 @@ NFA_seize_rif_desc:0 "The CNT has taken the African territories of Spain. We mus
 NFA_seize_portuguese_guinea:0 "Seize Portuguese Guinea"
 NFA_seize_portuguese_guinea_desc:0 "Portugal is caught in conflict right now, and its overseas empire is vulnerable. Some generals say now would be the perfect time to seize the lightly guarded territory of Guinea by marching into its capital of Bissau before the Germans or anyone else thinks to seize it for themselves."
 
+NFA_strike_france:0 "Return to the Continent!"
+NFA_strike_france_desc:0 "-"
 NFA_return_to_paris:0 "Return to Paris"
 NFA_return_to_paris_desc:0 "After many years of exile and struggle, finally the Fourth French Republic has reclaimed it's rightful lands. With Paris Proper back in our hands we can return to the city of lights and reclaim our position among the leading nations in this world!"
 NFA_return_to_marseille:0 "Return to Marseille"
