Capitalise the last of the modifiers, HP is Strength

--- a/localisation/stats_l_english.yml
+++ b/localisation/stats_l_english.yml
@@ -7,7 +7,7 @@ STAT_VALUE_CHANGE:0 "$VALUE|=+0$"
 STAT_VALUE_DIFF_NEUTRAL:0 " $VALUE|=H0$"
 STAT_VALUE_DIFF_POSITIVE:0 " $VALUE|=+0$"
 STAT_VALUE_DIFF_NEGATIVE:0 " $VALUE|=-0$"
-STAT_GLOBAL_STATS:0 "Global stats"
+STAT_GLOBAL_STATS:0 "Global Stats"
 STAT_COMMON_MAX_ORG:0 "Organisation: "
 STAT_COMMON_MAX_ORG_DESC:0 "Organisation indicates combat readiness and how organised a unit is. A unit with no organisation can't fight or move effectively."
 STAT_COMMON_MAX_ORG_VALUE:0 "$VALUE|H1$"
@@ -18,13 +18,13 @@ STAT_ARMY_DEFAULT_MORALE_DESC:0 "How much extra organisation can be regained hou
 STAT_ARMY_DEFAULT_MORALE_VALUE:0 "$VALUE|H2$"
 STAT_ARMY_DEFAULT_MORALE_DIFF:0 " $VALUE|=+2$"
 STAT_ARMY_DEFAULT_MORALE_MOD_VALUE:0 " $VALUE|=+2$"
-STAT_ARMY_COMBAT_WIDTH:0 "Combat width: "
+STAT_ARMY_COMBAT_WIDTH:0 "Combat Width: "
 STAT_ARMY_COMBAT_WIDTH_DIFF:0 " $VALUE|=-1$"
 STAT_ARMY_DEFENSE:0 "Defence: "
 STAT_ARMY_DEFENSE_DESC:0 "How many enemy attacks a unit can attempt to avoid while on the defensive, effectively allowing it to hold the line longer."
 STAT_ARMY_DEFENSE_VALUE:0 "$VALUE|H1$"
 STAT_ARMY_DEFENSE_DIFF:0 " $VALUE|=+1$"
-STAT_ARMY_COLLATERAL:0 "Collateral damage: "
+STAT_ARMY_COLLATERAL:0 "Collateral Damage: "
 STAT_ARMY_COLLATERAL_DESC:0 "How much damage this unit causes to infrastructure and forts."
 STAT_ARMY_COLLATERAL_VALUE:0 "$VALUE|H1$"
 STAT_ARMY_COLLATERAL_DIFF:0 " $VALUE|=+1$"
@@ -36,11 +36,11 @@ STAT_ARMY_HARDNESS:0 "Hardness: "
 STAT_ARMY_HARDNESS_DESC:0 "§T§HHardness§! represents how much of your §HDivision§! is made up of armoured or at least protected vehicles.\n\nWhen attacked, a Division adds together all Soft Attacks and Hard Attacks. A Division with high §HHardness§! will suffer fewer §HSoft Attacks§! and more §HHard Attacks§! - and vice versa.§!"
 STAT_ARMY_HARDNESS_VALUE:0 "$VALUE|H1%$"
 STAT_ARMY_HARDNESS_DIFF:0 " $VALUE|=+1$"
-STAT_ARMY_SOFT_ATTACK:0 "Soft attack: "
+STAT_ARMY_SOFT_ATTACK:0 "Soft Attack: "
 STAT_ARMY_SOFT_ATTACK_DESC:0 "How many attacks the unit can make versus enemies with low hardness."
 STAT_ARMY_SOFT_ATTACK_VALUE:0 "$VALUE|H1$"
 STAT_ARMY_SOFT_ATTACK_DIFF:0 " $VALUE|=+1$"
-STAT_ARMY_HARD_ATTACK:0 "Hard attack: "
+STAT_ARMY_HARD_ATTACK:0 "Hard Attack: "
 STAT_ARMY_HARD_ATTACK_DESC:0 "How many attacks the unit can make versus enemies with high hardness."
 STAT_ARMY_HARD_ATTACK_VALUE:0 "$VALUE|H1$"
 STAT_ARMY_HARD_ATTACK_DIFF:0 " $VALUE|=+1$"
@@ -55,11 +55,11 @@ STAT_ARMY_ENTRENCHMENT_VALUE:0 "$VALUE|H0$"
 STAT_ARMY_ENTRENCHMENT_DIFF:0 " $VALUE|=+0$"
 STAT_ARMY_ENTRENCHMENT_MOD_VALUE:0 "$VALUE|=+1$"
 STAT_ARMY_ENTRENCHMENT_MOD_DIFF:0 " $VALUE|=+1$"
-STAT_ARMY_FUEL_CONSUMPTION:0 "Fuel use: "
+STAT_ARMY_FUEL_CONSUMPTION:0 "Fuel Use: "
 STAT_ARMY_FUEL_CONSUMPTION_DESC:0 "How much fuel this unit uses daily."
 STAT_ARMY_FUEL_CONSUMPTION_VALUE:0 "$VALUE|H1$"
 STAT_ARMY_FUEL_CONSUMPTION_DIFF:0 " $VALUE|=-1$"
-STAT_ARMY_SUPPLY_CONSUMPTION:0 "Supply use: "
+STAT_ARMY_SUPPLY_CONSUMPTION:0 "Supply Use: "
 STAT_ARMY_SUPPLY_CONSUMPTION_DESC:0 "How much supply a unit consumes per day."
 STAT_ARMY_SUPPLY_CONSUMPTION_VALUE:0 "$VALUE|H2$"
 STAT_ARMY_SUPPLY_CONSUMPTION_DIFF:0 " $VALUE|=-2$"
@@ -84,18 +84,18 @@ STAT_ARMY_SUPRESSION_FACTOR:0 "Suppression Bonus: "
 STAT_ARMY_SUPRESSION_FACTOR_DESC:0 "Ability to suppress local resistance."
 STAT_ARMY_SUPRESSION_FACTOR_VALUE:0 "$VALUE|=+0%$"
 STAT_ARMY_SUPRESSION_FACTOR_DIFF:0 " $VALUE|=+0%$"
-STAT_ARMY_RESISTANCE_SUPPRESS:0 "Resistance suppression: "
+STAT_ARMY_RESISTANCE_SUPPRESS:0 "Resistance Suppression: "
 STAT_ARMY_RESISTANCE_SUPPRESS_VALUE:0 "$VALUE|H1$"
 STAT_ARMY_RESISTANCE_SUPPRESS_DIFF:0 " $VALUE|=+1$"
-STAT_NAVY_TRANSPORT_CAPABILITY:0 "Transport capability: "
+STAT_NAVY_TRANSPORT_CAPABILITY:0 "Transport Capacity: "
 STAT_NAVY_TRANSPORT_CAPABILITY_DESC:0 "How many divisions can be transported."
 STAT_NAVY_TRANSPORT_CAPABILITY_VALUE:0 "$VALUE|H0$"
 STAT_NAVY_TRANSPORT_CAPABILITY_DIFF:0 " $VALUE|=+0$"
-STAT_NAVY_SURFACE_DETECTION:0 "Surface detection: "
+STAT_NAVY_SURFACE_DETECTION:0 "Surface Detection: "
 STAT_NAVY_SURFACE_DETECTION_DESC:0 "Ability to detect surface vessels."
 STAT_NAVY_SURFACE_DETECTION_VALUE:0 "$VALUE|H1$"
 STAT_NAVY_SURFACE_DETECTION_DIFF:0 " $VALUE|+=1$"
-STAT_NAVY_SUB_DETECTION:0 "Sub detection: "
+STAT_NAVY_SUB_DETECTION:0 "Sub Detection: "
 STAT_NAVY_SUB_DETECTION_DESC:0 "Ability to detect submarines."
 STAT_NAVY_SUB_DETECTION_VALUE:0 "$VALUE|H1$"
 STAT_NAVY_SUB_DETECTION_DIFF:0 " $VALUE|=+1$"
@@ -109,7 +109,7 @@ STAT_NAVY_SUB_VISIBILITY_DESC:0 "How easy to detect a submarine is."
 STAT_NAVY_SUB_VISIBILITY_VALUE:0 "$VALUE|H1$"
 STAT_NAVY_SUB_VISIBILITY_DIFF:0 " $VALUE|=-1$"
 STAT_NAVY_SUB_VISIBILITY_MOD_DIFF:0 " $VALUE|=-1%$"
-STAT_NAVY_SHORE_BOMBARDMENT:0 "Shore bombard: "
+STAT_NAVY_SHORE_BOMBARDMENT:0 "Shore Bombard: "
 STAT_NAVY_SHORE_BOMBARDMENT_DESC:0 "A unit's ability to do shore bombardment to help out in land battles neighbouring its sea province when on Hold mission."
 STAT_NAVY_SHORE_BOMBARDMENT_VALUE:0 "$VALUE|H1$"
 STAT_NAVY_SHORE_BOMBARDMENT_DIFF:0 " $VALUE|=+1$"
@@ -117,7 +117,7 @@ STAT_NAVY_MISSION_COVERAGE:0 "Spotting Efficiency: "
 STAT_NAVY_MISSION_COVERAGE_DESC:0 "§THow efficient the ship is at spotting enemies. Each ship adds its spotting efficiency.§!"
 STAT_NAVY_MISSION_COVERAGE_VALUE:0 "$VALUE|H1$"
 STAT_NAVY_MISSION_COVERAGE_DIFF:0 " $VALUE|=+1$"
-STAT_NAVY_FIRE_RANGE:0 "Fire range: "
+STAT_NAVY_FIRE_RANGE:0 "Fire Range: "
 STAT_NAVY_FIRE_RANGE_DESC:0 "The range of a ship's main guns."
 STAT_NAVY_FIRE_RANGE_VALUE:0 "$VALUE|H1$"
 STAT_NAVY_FIRE_RANGE_DIFF:0 " $VALUE|=+1$"
@@ -125,26 +125,26 @@ STAT_NAVY_EVASION:0 "Evasion: "
 STAT_NAVY_EVASION_DESC:0 "Ability for ships to evade enemy fire through manoeuvring. When evaluating chances to avoid being hit the target's evasion value is compared to the attacker, so if you have high evasion you will also be better able to hit evasive targets."
 STAT_NAVY_EVASION_VALUE:0 "$VALUE|H1$"
 STAT_NAVY_EVASION_DIFF:0 " $VALUE|=+1$"
-STAT_NAVY_TORPEDO_ATTACK:0 "Torpedo attack: "
+STAT_NAVY_TORPEDO_ATTACK:0 "Torpedo Attack: "
 STAT_NAVY_TORPEDO_ATTACK_VALUE:0 "$VALUE|H1$"
 STAT_NAVY_TORPEDO_ATTACK_DIFF:0 " $VALUE|=+1$"
 STAT_NAVY_TORPEDO_ATTACK_DESC:0 "How much damage we can do when using the ship's torpedoes."
-STAT_NAVY_SUB_ATTACK:0 "Depth charges: "
+STAT_NAVY_SUB_ATTACK:0 "Depth Charges: "
 STAT_NAVY_SUB_ATTACK_VALUE:0 "$VALUE|H1$"
 STAT_NAVY_SUB_ATTACK_DIFF:0 " $VALUE|=+1$"
 STAT_NAVY_SUB_ATTACK_DESC:0 "How much damage we can do to the enemy submarines with depth charges."
-STAT_NAVY_ATTACK:0 "Naval firepower: "
+STAT_NAVY_ATTACK:0 "Naval Firepower: "
 STAT_NAVY_ATTACK_DESC:0 "The size of the holes we can punch through enemy ships."
 STAT_NAVY_ATTACK_VALUE:0 "$VALUE|H1$"
 STAT_NAVY_ATTACK_DIFF:0 " $VALUE|=+1$"
-STAT_NAVY_ANTI_AIR_ATTACK:0 "Anti-air: "
+STAT_NAVY_ANTI_AIR_ATTACK:0 "Anti-Air: "
 STAT_NAVY_ANTI_AIR_ATTACK_DESC:0 "How much anti-air firepower the ship carries for shooting down enemy planes."
 STAT_NAVY_ANTI_AIR_ATTACK_VALUE:0 "$VALUE|H1$"
 STAT_NAVY_ANTI_AIR_ATTACK_DIFF:0 " $VALUE|=+1$"
-STAT_NAVY_ANTI_AIR_TARGETTING:0 "Anti-air targeting: "
+STAT_NAVY_ANTI_AIR_TARGETTING:0 "Anti-Air Targeting: "
 STAT_NAVY_ANTI_AIR_TARGETTING_DESC:0 "How well the ship can track enemy planes to shoot them down."
 STAT_NAVY_ANTI_AIR_TARGETTING_VALUE:0 "$VALUE|H1$"
-STAT_NAVY_PORT_CAPACITY_USAGE:0 "Port capacity usage: "
+STAT_NAVY_PORT_CAPACITY_USAGE:0 "Port Capacity Usage: "
 STAT_NAVY_PORT_CAPACITY_USAGE_DESC:0 "How much room the ship requires in a port."
 STAT_NAVY_PORT_CAPACITY_USAGE_VALUE:0 "$VALUE|H1$"
 STAT_NAVY_PORT_CAPACITY_USAGE_DIFF:0 " $VALUE|=+1$"
@@ -181,12 +181,12 @@ STAT_AIR_GROUND_ATTACK:0 "Ground Attack: "
 STAT_AIR_GROUND_ATTACK_VALUE:0 "$VALUE|H1$"
 STAT_AIR_GROUND_ATTACK_DIFF:0 " $VALUE|=+1$"
 STAT_AIR_GROUND_ATTACK_DESC:0 "How much damage the plane can do to enemy divisions on the ground when helping out in combat."
-STAT_COMMON_MAX_STRENGTH:0 "HP: "
+STAT_COMMON_MAX_STRENGTH:0 "Strength: "
 STAT_COMMON_MAX_STRENGTH_DESC:0 "Strength represents how much damage this unit can suffer before it is destroyed."
 STAT_COMMON_MAX_STRENGTH_VALUE:0 "$VALUE|H1$"
 STAT_COMMON_MAX_STRENGTH_DIFF:0 " $VALUE|=+1$"
 STAT_COMMON_BUILD_COST_IC:0 "£production_cost  Production Cost: "
-STAT_COMMON_BUILD_COST_IC_T:0 "§TConstruction cost: §!"
+STAT_COMMON_BUILD_COST_IC_T:0 "§TConstruction Cost: §!"
 STAT_COMMON_BUILD_COST_IC_DESC:0 "§THow much Factory Output a piece of equipment needs. §H1§! factory has a Factory Output of $SPEED|H$ per day.§!"
 STAT_COMMON_BUILD_COST_IC_VALUE:0 "$VALUE|H1$"
 STAT_COMMON_BUILD_COST_IC_VALUE_EXTRA:1 "$VALUE|H1$ (+$EXTRA|H$ per existing $BUILDING|H$ level)"
@@ -217,7 +217,7 @@ STAT_RANGE:0 "Range: "
 STAT_RANGE_DESC:0 "Maximum distance this unit can travel."
 STAT_RANGE_VALUE:0 "$VALUE|H1$ km"
 STAT_RANGE_DIFF:0 " $VALUE|=+1$ km"
-STAT_CARRIER_SIZE:0 "Deck size: "
+STAT_CARRIER_SIZE:0 "Deck Size: "
 STAT_CARRIER_SIZE_DESC:0 "How many planes a carrier can fit on board."
 STAT_CARRIER_SIZE_VALUE:0 "$VALUE|H0$"
 STAT_CARRIER_SIZE_DIFF:0 " $VALUE|=+0$"
@@ -257,13 +257,13 @@ STAT_COMMON_WEIGHT:0 "Weight: "
 STAT_COMMON_WEIGHT_DESC:0 "How much the unit will weigh. Heavier units will require more transports to ship and perform invasions effectively."
 STAT_COMMON_WEIGHT_VALUE:0 "$VALUE|H1$"
 STAT_COMMON_WEIGHT_DIFF:0 " $VALUE|=-1$"
-STAT_CASUALTY_TRICKLEBACK:0 "Casualty trickleback: "
+STAT_CASUALTY_TRICKLEBACK:0 "Casualty Trickleback: "
 STAT_CASUALTY_TRICKLEBACK_VALUE:0 "$VALUE|H0%$"
 STAT_CASUALTY_TRICKLEBACK_DESC:0 "What percentage of manpower makes it back to the manpower pool after being wounded in combat."
-STAT_NAVY_AMPHIBIOUS_DEFENSE:0 "Amphibious defence"
+STAT_NAVY_AMPHIBIOUS_DEFENSE:0 "Amphibious Defence"
 STAT_NAVY_AMPHIBIOUS_DEFENSE_VALUE:0 "$VALUE|H0%$"
 STAT_NAVY_AMPHIBIOUS_DEFENSE_DESC:0 "Extra defence given to units while doing amphibious invasions."
-STAT_NAVY_INVASION_SPEED:0 "Unload speed"
+STAT_NAVY_INVASION_SPEED:0 "Unload Speed"
 STAT_NAVY_INVASION_SPEED_VALUE:0 "$VALUE|H0%$"
 STAT_NAVY_INVASION_SPEED_DESC:0 ""
 STAT_NAVY_RAIDING_COORDINATION:0 "Raiding Coordination: "
@@ -275,10 +275,10 @@ STAT_NAVY_PATROL_COORDINATION_DESC:0 "How quickly the fleet can gather when some
 STAT_NAVY_SEARCH_AND_DESTROY_COORDINATION:0 "Search & Destroy: "
 STAT_NAVY_SEARCH_AND_DESTROY_COORDINATION_VALUE:0 "$VALUE|H0%$"
 STAT_NAVY_SEARCH_AND_DESTROY_COORDINATION_DESC:0 "How quickly the fleet can gather when a target is found during Search & Destroy missions."
-STAT_MISSION_CONVOY_ESCORT_EFFICIENCY:0 "Escort efficiency: "
+STAT_MISSION_CONVOY_ESCORT_EFFICIENCY:0 "Escort Efficiency: "
 STAT_MISSION_CONVOY_ESCORT_EFFICIENCY_VALUE:0 "$VALUE|H0%$"
 STAT_MISSION_CONVOY_ESCORT_EFFICIENCY_DESC:0 "How quickly Escorts can defend a Convoy under attack."
 SOFT_ATTACK_TAKEN:0 "§TSoft Attack Taken: §!"
 HARD_ATTACK_TAKEN:0 "§THard Attack Taken: §!"
 STAT_TOOLTIP_DESIGNER_DIFF:0 "$NAME|H$: $VALUE$"
-STAT_COMMON_BUILD_COST_IC_T_CONVERTING:0 "§TConversion cost: §!"
+STAT_COMMON_BUILD_COST_IC_T_CONVERTING:0 "§TConversion Cost: §!"
