New stuff for Syndicalist Ukraine

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -222,6 +222,11 @@ ukraine.31.b:0 "Too damn expensive!"
 ukraine.32.t:0 "The Industrialisation of Eastern Ukraine is Complete"
 ukraine.32.d:0 "The workers of Eastern Ukraine have got new workplaces. As a result a majority of the population has become loyal to us. We have recovered from Black Monday and defeated all the syndicalist trade unions in the East!"
 ukraine.32.a:0 "Great!"
+ukraine.33.t:0 "Ukraine asks for help!"
+ukraine.33.d:0 "Ukraine, a new syndicalist nation in the Eastern Europe led by Nikita Khrushchev asks our help since they can't start the reform in their industry alone. There are some plans which were proposed by our ministry of economy - which one will we choose?"
+ukraine.33.a:0 "Time to help their military industry!"
+ukraine.33.b:0 "Let's build a brewing facility in their capital!"
+ukraine.33.c:0 "They can do everything without us."
 ukraine.34.d:0 "The treacherous Ukrainians have deserted our alliance! Many hotheads in the general staff suggest military action to punish the Ukraine, however, doing so would be extremely unwise as Ukraine possesses one of the largest armed forces in Europe. Instead members of the Abwehr suggest that we use our ties with many important members of the Ukrainian armed forces to instigate a coup. How shall we react to this betrayal?"
 ukraine.34.a:0 "There is nothing we can do..."
 ukraine.34.b:0 "Covert operations will be good enough."
@@ -229,6 +234,16 @@ ukraine.35.c:0 "Such betrayal will not be tolerated!"
 ukraine.35.t:0 "German Military Mission Leaves the Ukraine"
 ukraine.35.d:0 "Following our decision to leave the hated Mitteleuropa System, the German military mission present in country since 1918 finally left!"
 ukraine.35.a:0 "Finally they leave!"
+ukraine.36.t:0 "'Arsenal'"
+ukraine.36.d:0 "On January 29, 1918, the workers of the factory 'Arsenal' in Kiev organized an armed pro-Bolshevik mutiny known as a January Rebellion against Central Rada, the Ukrainian assembly that declared the independence of Ukraine. Since then the government didn't try to expand the factory, fearing the temper of its workers. But after the triumph of the Syndicalism in Ukraine, the French government decided to help us with the reving of the factory. 'Arsenal' will mainly produce artillery, anti-tank, and anti-aircraft guns."
+ukraine.36.a:0 "That's great!"
+ukraine.37.t:0 "Ukraine Wants to Join the International"
+ukraine.37.d:0 "The government of the Ukraine has announced recently that they want to join the Syndicalist bloc. It's not a sudden move because pro-Syndicalist policy is popular in many circles including the government and army. Do we want Ukrainian workers and peasants joining the crusade against bloodthirsty Germans and rotten imperialist Canadian pigs?"
+ukraine.37.a:0 "Yes! We shall envelop the hated Bosche!"
+ukraine.37.b:0 "Rather not."
+ukraine.38.t:0 "We Join the International"
+ukraine.38.d:0 "The French and British are happy to see us joining the common cause - destroying the evil imperialists. Now we are part of the Syndicalist bloc."
+ukraine.38.a:0 "This time we will win!"
 ukraine.39.t:0 "Attempt at a Military Coup"
 ukraine.39.d:0 "German agitators with the help of reactionary officers and a part of the armed forces, have launched a coup against our government and are trying to restore the pro-German regime in Ukraine. The country is in chaos, how will the situation develop?"
 ukraine.39.a:0 "The reactionary putschists secure the capital!"
@@ -240,6 +255,12 @@ ukraine.41.t:0 "Military Coup in the Ukraine Failed"
 ukraine.41.d:0 "Our attempt to replace the government in Ukraine with one loyal to our state has failed miserably. What shall we do now?"
 ukraine.41.a:0 "There is nothing we can do..."
 ukraine.41.b:0 "War will solve this!"
+ukraine.42.t:0 "'Obolon'"
+ukraine.42.d:0 "Nikita Khrushchev knows that the workers and peasants of Ukraine deserve a chance for a better and joy life, that's why he always pays serious attention to the needs of the ordinary people. The French government proposed us a good idea how to make the live in Ukraine better - the Commune will invest in the largest brewing facility in Europe, which will produce beer for our people. The factory, which were named 'Obolon' will definitely give us some support among the low and middle classes of the Ukrainian society."
+ukraine.42.a:0 "Excellent!"
+ukraine.43.t:0 "No support from France!"
+ukraine.43.d:0 "Though the Commune of France knows about our internal problems, it seems that they are not going to help us...at least right now. But we have to be persistent and hope that we will improve our relations with the strongest syndicalist nations in the world!"
+ukraine.43.a:0 "Let's hope they won't forget us at all."
 
 ### Foci ###
 
@@ -365,11 +386,11 @@ UKR_Mozyr_claim_desc:0 "-"
 UKR_Bessarabia_claim:0 "Blue Danube"
 UKR_Bessarabia_claim_desc:0 "-"
 UKR_Fra_cooperation:0 "Cooperation with France"
-UKR_Fra_cooperation_desc:0 "-"
+UKR_Fra_cooperation_desc:0 "Commune of France is the torch of the progress and liberty in Europe. Fortunately Nikita Khrushchev understands that the future belongs to this young and free nation. That's why he proposes that both the Ukrainians and the French should improve the economical relations between our countries, which were almost destroyed during the reign of the former Ukrainian king."
 UKR_Fra_alliance:0 "Syndicalist unity"
-UKR_Fra_alliance_desc:0 "-"
+UKR_Fra_alliance_desc:0 "With Ukraine finally free from German capitalist oppression we can now freely decide our stance towards the international community. The immediate alliance with other Syndicalist nations can be very profitable for us and will finally secure Ukraine from the aggressive of the Germans, who doesn't want just forget about the fail of their puppet king. We should ask France for an alliance."
 UKR_Fra_claims:0 "Red Liberation"
-UKR_Fra_claims_desc:0 "-"
+UKR_Fra_claims_desc:0 "Lots of the Ukrainian lands are still under countrol of the various regimes, which don't always respect all the rights of the Ukrainiansin their countries. If we want to strengthen the friendship of the nations as well as to secure the right of the self-determination of the Ukrainians, we should claim borderlands and hope that one day we will take them back."
 UKR_RUS_friendship:0 "Great Union"
 UKR_RUS_friendship_desc:0 "-"
 UKR_RUS_Officers:0 "Northern Wind"
