--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -2043,6 +2043,37 @@ CZE_czechoslavakia_totalist:0 "Czechoslovakian Union"
 CZE_czechoslavakia_totalist_ADJ:0 "Czechoslovakian"
 CZE_czechoslavakia_totalist_DEF:0 "The Czechoslovakian Union"
 
+CNT_FAI_authoritarian_democrat:0 "CNT-FAI"
+CNT_FAI_authoritarian_democrat_ADJ:0 "Anarcho-Syndicalist"
+CNT_FAI_authoritarian_democrat_DEF:0 "CNT-FAI"
+CNT_FAI_market_liberal:0 "CNT-FAI"
+CNT_FAI_market_liberal_ADJ:0 "Anarcho-Syndicalist"
+CNT_FAI_market_liberal_DEF:0 "CNT-FAI"
+CNT_FAI_national_populist:0 "CNT-FAI"
+CNT_FAI_national_populist_ADJ:0 "Anarcho-Syndicalist"
+CNT_FAI_national_populist_DEF:0 "CNT-FAI"
+CNT_FAI_paternal_autocrat:0 "CNT-FAI"
+CNT_FAI_paternal_autocrat_ADJ:0 "Anarcho-Syndicalist"
+CNT_FAI_paternal_autocrat_DEF:0 "CNT-FAI"
+CNT_FAI_radical_socialist:0 "CNT-FAI"
+CNT_FAI_radical_socialist_ADJ:0 "Anarcho-Syndicalist "
+CNT_FAI_radical_socialist_DEF:0 "CNT-FAI"
+CNT_FAI_social_conservative:0 "CNT-FAI"
+CNT_FAI_social_conservative_ADJ:0 "Anarcho-Syndicalist"
+CNT_FAI_social_conservative_DEF:0 "CNT-FAI"
+CNT_FAI_social_democrat:0 "CNT-FAI"
+CNT_FAI_social_democrat_ADJ:0 "Anarcho-Syndicalist"
+CNT_FAI_social_democrat_DEF:0 "CNT-FAI"
+CNT_FAI_social_liberal:0 "CNT-FAI"
+CNT_FAI_social_liberal_ADJ:0 "Anarcho-Syndicalist"
+CNT_FAI_social_liberal_DEF:0 "CNT-FAI"
+CNT_FAI_syndicalist:0 "CNT-FAI"
+CNT_FAI_syndicalist_ADJ:0 "Anarcho-Syndicalist "
+CNT_FAI_syndicalist_DEF:0 "CNT-FAI"
+CNT_FAI_totalist:0 "CNT-FAI"
+CNT_FAI_totalist_ADJ:0 "Anarcho-Syndicalist"
+CNT_FAI_totalist_DEF:0 "CNT-FAI"
+
 ##############
 #Vanilla
 ##############
