--- a/localisation/KR_Austria_l_english.yml
+++ b/localisation/KR_Austria_l_english.yml
@@ -77,7 +77,7 @@ AUS_eco_council:0 "The k.k. Ministeria"
 AUS_black_monday_1_focus:0 "k.k. Ministerium für Finanzen"
 AUS_black_monday_2_focus:0 "k.k. Ministerium für Handel"
 AUS_eco_investment:0 "k.k. Sonderkommission für Wirtschaftliche Rehabilitation"
-AUS_farms_expand:0 "Expand domestic Farms"
+AUS_farms_expand:0 "Expand Domestic Farms"
 AUS_montenegro_resources:0 "Montenegro Oil Rigs"
 AUS_alpine_highways:0 "Electrifying the Südbahn"
 AUS_alpine_mines:0 "Alpine Mines"
