--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -39,7 +39,7 @@ worldnews.6.c:0 "We will have a talk with the intelligence services."
 
 worldnews.7.t:0 "Tsardom Restored"
 worldnews.7.d:0 "The Russian Republic, created in the last years of the Weltkrieg, appears to only have lasted twenty years before it's end. Plagued by disorder, conflict and ineffective governments, the Republic lost the support of the people, and Russian agencies now report that a successor of Nicholas II has been finally coronated as the new Tsar of the nation.\n\nWhile it is not known how different the international stance of this reborn Russian Empire will be, or even if the coronation of the Tsar will have any effect in 'saving the country', numerous monarchies across the world have already congratulated the Romanovs on regaining their divine birth right."
-worldnews.7.a:0 "Russian Democracy has been suppressed."
+worldnews.7.a:0 "Russian Democracy has been suppressed, perhaps forever."
 worldnews.7.b:0 "A toast to the return of the Romanovs!"
 worldnews.7.c:0 "The workers will again have the Tsar's head!"
 worldnews.7.e:0 "The rightful Tsar of Russia returns!"
