--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -219,6 +219,7 @@ worldnews.30.c:0 "We are willing to support Japan's claims, especially if they s
 worldnews.30.e:0 "Should Japan threaten Siberia, our response will be clear and overwhelming!"
 worldnews.30.f:0 "The Japanese Empire will raise like the Sun and invites all nations of Asia into its sphere!"
 worldnews.30.g:0 "There is not enough room for two empires in Asia!"
+worldnews.30.h:0 "Should Japan threaten German colonies in Asia, they will face the might of the Kriegsmarine!"
 
 worldnews.31.t:0 "Travailleurs Elected in France"
 worldnews.31.d:0 "The Commune of France is the world's leading Syndicalist nation, united as a federation of city communes and directed by the Comité de Salut Public, the primary executive. Ever since its inception, however, the Second Commune was not uniform in its policy, numerous factions arose, each one with their own idea of which path France should take. As the time for revenge against Germany and the World Revolution closes in, the CGT election of 1936 is set to be very important.\n\nThe replacement for the disgraced Marceau Pivert arose from his own faction, the Travailleurs, who now hold the leading position in the CSP. They stand for an extension of democracy, and draw inspiration from the British to decentralise the Commune."
