--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -426,6 +426,10 @@ worldnews.56.c:0 "Romania may come for Transylvania next. Let us increase guard 
 worldnews.56.e:0 "It is no more than the Romanians walking into their own backyard."
 worldnews.56.f:0 "The old order of the Balkans must be questioned. Enough with Bulgaria and the Empire!"
 
+worldnews.57.t:0 "Riots and Protests at Rangoon University"
+worldnews.57.d:0 "Dissatisfaction with the lack of popular involvement in government has sparked some of the greatest demonstrations in Burma since their own independence in 1926. Stemming from the great and prestigious Rangoon University, radicalised leftist students have occupied several administrative buildings and held rallies denouncing the monarchy and its feudal backers as being corrupt and detrimental to the welfare of the nation. Still, the demonstrators haven’t managed to garner the support of the industrial workers and rural farmers, restricting the budding movement to the Burmese intelligentsia."
+worldnews.57.a:0 "Syndicalist riots? Let us keep a firm eye on the Burmese."
+worldnews.57.b:0 "The Revolution spreads from the Indian workers to the Burmese workers."
 
 ### City Fall Events ###
 
